Bug 299516 Switching out and in a field with unconfirmed inline input re-enables it incorrectly r=josh, sr=roc, a=pavlov